Add POST for authors
